framec_tests/language_specific/c/v3_facade_smoke/negative/forward_with_args.frm
@target c

system S {
    machine:
        $A {
            e() {
                __frame_forward(1);
            }
        }
}

